--- a/userdetails/WebContent/userdetails1.html
+++ b/userdetails/WebContent/userdetails1.html
@@ -18,7 +18,7 @@ Password(min 6 characters):<br>
 <input type="radio" name="sex" value="female">Female
 <br><br>
 
-<button type="button" onclick="alert('Value Submitted!')">Submit</button>
+<button type="button" onclick="alert('Submitted!')">Submit</button>
 </form>
 </body>
 </html>
